cleanup sensitive details

--- a/phc_microservice_adolescentcareservice/src/main/resources/application.properties
+++ b/phc_microservice_adolescentcareservice/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.kafka.producer.value-serializer=org.springframework.kafka.support.seriali
 spring.kafka.producer.acks=all
 kafka.enabled=false
 spring.env=dev
-aws.access.key=AKIAR2KY2Z47FONLTPZX
-aws.secret.key=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
+aws.access.key=${aws-access-key}
+aws.secret.key=${aws-secret-key}
 aws.region=ap-south-1
 aws.secret.name=ssf-dev-secret
