--- a/phc_microservice_covidsurveillance/src/main/resources/application.properties
+++ b/phc_microservice_covidsurveillance/src/main/resources/application.properties
@@ -11,7 +11,7 @@ application-description=@project.description@
 application-version=@project.version@
 
 spring.env=${profile}
-aws.access.key=AKIAR2KY2Z47FONLTPZX
-aws.secret.key=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
+aws.access.key=${aws-access-key}
+aws.secret.key=${aws-secret-key}
 aws.region=${region}
 aws.secret.name=${secret}
