--- a/phc_microservice_organization/organization/src/main/resources/application.properties
+++ b/phc_microservice_organization/organization/src/main/resources/application.properties
@@ -3,9 +3,9 @@ logging.level.org.springframework.data.neo4j.cypher=debug
 logging.level.org.neo4j.driver.GraphDatabase=debug
 logging.level.org.neo4j.driver.Driver=debug  
 
-spring.neo4j.uri=neo4j+s://54ad817d.databases.neo4j.io
-spring.neo4j.authentication.username=neo4j
-spring.neo4j.authentication.password=t1BvtHzLMXnnH1MDDkwvUeA8GMqPHpKdJFb31_6C_tI
+spring.neo4j.uri=YOUR_NEO4J_URI
+spring.neo4j.authentication.username=YOUR_NEO4J_USERNAME
+spring.neo4j.authentication.password=YOUR_NEO4J_PASSWORD
 
 
 
@@ -13,7 +13,7 @@ server.servlet.context-path=/organization-svc
 spring.kafka.client-id=organization-svc
 spring.kafka.bootstrap-servers=localhost:9092
 spring.env=${profile}
-aws.access.key=AKIAR2KY2Z47FONLTPZX
-aws.secret.key=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
+aws.access.key=${aws-access-key}
+aws.secret.key=${aws-secret-key}
 aws.region=${region}
 aws.secret.name=${secret}
