--- a/phc_microservice_primaryhealthcare/src/main/resources/application.properties
+++ b/phc_microservice_primaryhealthcare/src/main/resources/application.properties
@@ -4,7 +4,7 @@ logging.level.org.springframework.data.neo4j.cypher=trace
 server.port=81
 server.servlet.context-path=/primary-healthcare-svc
 spring.env=${profile}
-aws.access.key=AKIAR2KY2Z47FONLTPZX
+aws.access.key=${aws-access-key}
 aws.secret.key=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
 aws.region=${region}
 aws.secret.name=${secret}
