--- a/phc_microservice_adolescentcareservice/src/test/resources/application-test.properties
+++ b/phc_microservice_adolescentcareservice/src/test/resources/application-test.properties
@@ -18,7 +18,7 @@ spring.kafka.bootstrap-servers=${spring.embedded.kafka.brokers}
 #aws.secret.name=${secret}
 
 spring.env=dev
-aws.access.key=AKIAR2KY2Z47FONLTPZX
-aws.secret.key=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
+aws.access.key=${aws-access-key}
+aws.secret.key=${aws-secret-key}
 aws.region=ap-south-1
 aws.secret.name=ssf-dev-secret
