--- a/phc_microservice_baseprogram/src/main/resources/application.properties
+++ b/phc_microservice_baseprogram/src/main/resources/application.properties
@@ -19,7 +19,7 @@ kafka.enabled=true
 
 
 spring.env=${profile}
-aws.access.key=AKIAR2KY2Z47FONLTPZX
+aws.access.key=${aws-access-key}
 aws.secret.key=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
 aws.region=${region}
 aws.secret.name=${secret}
