--- a/phc_microservice_pharmacyorders/src/main/resources/application.properties
+++ b/phc_microservice_pharmacyorders/src/main/resources/application.properties
@@ -10,7 +10,7 @@ logging.level.org.hibernate=ERROR
 logging.level.com.ssf.pharmacyorder=DEBUG
 
 spring.env=${profile}
-aws.access.key=AKIAR2KY2Z47FONLTPZX
-aws.secret.key=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
+aws.access.key=${aws-access-key}
+aws.secret.key=${aws-secret-key}
 aws.region=${region}
 aws.secret.name=${secret}
